src/style/tailwind.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@600&display=swap');

body {
    overflow: hidden;
}

@media (max-height: 740px) {
    .media-md-h {
        max-height: 570px;
        overflow-y: auto;
    }
}

@media (max-height: 680px) {
    .media-mx-h {
        height: 100%;
        gap: 1rem;
        overflow-y: auto;
    }

    .form-mb{
        margin-bottom: 4rem;
    }
}

